--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,7 @@
     align-items: center;
     height: 6.25rem;
     background-color: var(--sidebar-color);
-    box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
+    box-shadow: var(--box-shadow-1);
 }
 
 .hero__container{
